# lab

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
source/: main.cpp
